--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.0.0
+tensorflow==2.15 # Latest compatible version
 pandas==1.5.3
-numpy==1.24.3 
-keras==2.15
+numpy==1.24.3
+keras==2.15.0
 shap==0.46.0
-tensorflow==2.15
+protobuf==3.20.3  # Compatible version with Streamlit
+altair==4.2.2  # Compatible version with Streamlit
+click==8.0.0
