--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ shap==0.46.0
 protobuf==3.20.3  # Compatible version with Streamlit
 altair==4.2.2  # Compatible version with Streamlit
 click==8.0.0
+imblearn
